Fixed style for non firefox browsers

--- a/src/styles.css
+++ b/src/styles.css
@@ -5,8 +5,8 @@ body {
 }
 header {
   display: flex;
-  position: sticky;
-  top: 0;
+  position: fixed;
+  inset: 0px 0px auto;
   align-items: center;
   padding: 0px 250px;
   margin: auto;
@@ -65,6 +65,7 @@ footer {
   top: 0;
   left: 0;
   max-width: -moz-available;
+  width: -webkit-fill-available;
   height: 1050px;
 }
 
@@ -93,7 +94,7 @@ footer {
 }
 #menu-wrapper {
   background-color: rgba(255, 255, 255, 0);
-  width: 1200px;
+  width: 80%;
   height: 1200px;
   margin: auto;
   border: none;
@@ -125,6 +126,7 @@ footer {
   height: 900px;
   background-color: rgb(255, 255, 255);
   padding: 40px;
+  margin: 60px 0px 10px 0px;
 }
 #home:hover,
 #menu:hover,
@@ -152,4 +154,35 @@ footer {
   margin: 40px 20px;
   box-shadow: 0px -4px #00000012;
   padding: 10px;
+}
+
+@media only screen and (max-width: 1280px) {
+  .item-ingredients {
+    font-size: 12px;
+  }
+  .item-name {
+    font-size: 20px;
+  }
+  .item-cost {
+    font-size: 20px;
+  }
+  header {
+    padding: 0px 50px;
+  }
+  #about-wrapper {
+    margin: 100px 150px;
+  }
+  #home-wrapper {
+    margin: 100px 0px;
+  }
+  .home-img {
+    height: 240px;
+  }
+}
+@media only screen and (max-width: 1050px) {
+  #menu-wrapper {
+    width: 90%;
+  }
+}
+@media only screen and (max-width: 950px) {
 }
